@@ -309,13 +309,13 @@ CREATE TABLE `#__banner` (
   `editor` varchar(50) default NULL,
   `custombannercode` text,
   `catid` INTEGER UNSIGNED NOT NULL DEFAULT 0,
-  `description` TEXT NOT NULL DEFAULT '',
+  `description` TEXT NOT NULL,
   `sticky` TINYINT(1) UNSIGNED NOT NULL DEFAULT 0,
   `ordering` INTEGER NOT NULL DEFAULT 0,
   `publish_up` datetime NOT NULL default '0000-00-00 00:00:00',
   `publish_down` datetime NOT NULL default '0000-00-00 00:00:00',
-  `tags` TEXT NOT NULL DEFAULT '',
-  `params` TEXT NOT NULL DEFAULT '',
+  `tags` TEXT NOT NULL,
+  `params` TEXT NOT NULL,
   PRIMARY KEY  (`bid`),
   KEY `viewbanner` (`showBanner`),
   INDEX `idx_banner_catid`(`catid`)
@@ -839,7 +839,7 @@ CREATE TABLE `#__messages` (
   `date_time` datetime NOT NULL default '0000-00-00 00:00:00',
   `state` integer NOT NULL default '0',
   `priority` int(1) unsigned NOT NULL default '0',
-  `subject` text NOT NULL default '',
+  `subject` text NOT NULL,
   `message` text NOT NULL,
   PRIMARY KEY  (`message_id`),
   KEY `useridto_state` (`user_id_to`, `state`)
@@ -878,7 +878,7 @@ CREATE TABLE `#__modules` (
   `params` text NOT NULL,
   `iscore` tinyint(4) NOT NULL default '0',
   `client_id` tinyint(4) NOT NULL default '0',
-  `control` TEXT NOT NULL DEFAULT '',
+  `control` TEXT NOT NULL,
   PRIMARY KEY  (`id`),
   KEY `published` (`published`,`access`),
   KEY `newsfeeds` (`module`,`published`)
