@@ -27,13 +27,14 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
-12-Aug-2009
+12-Aug-2009 Gergo Erdosi
  ^ Removed legacy code from the .htaccess file.
  ^ Updated robots.txt to the current directory structure.
  ^ Replaced com_languages with its refactored version.
  ! Thanks to Christophe Demko for helping refactor the com_languages component.
  ^ Replaced com_messages with its refactored version.
  ! Thanks to Joe LeBlanc for helping refactor the com_messages component.
+ - Removed DEFAULT values of TEXT types in installation SQL.
 
 05-Aug-2009 Ercan Ozkaya
  # [#17479] Com_menus and com_modules issue fix (Thanks Johnathan Cheung)
